<resources>
    <string name="app_name">AppOLog</string>
    <string name="app_label">AppOLog</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_you">You</string>
    <string name="title_settings">Settings</string>
    <string name="latest">Latest</string>
    <string name="title_write">Write</string>
    <string name="title_of_blog">Title</string>
    <string name="content_of_blog">Content</string>
    <string name="image_of_blog">Image</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome!</string>
    <string name="get_started">Get Started</string>
    <string name="blog_content_hint_tv">Start writing your blog below .....</string>
    <string name="blog_title_hint_et">Blog Title</string>
    <string name="no_search_result_found">Sorry! No search results found for searched keyword.  Please Try searching for some other keyword</string>
    <string name="no_favourite_blogs">You have no favourite blogs</string>
    <string name="your_account">Your Account</string>
    <string name="legal_about"><![CDATA[Legal & About]]></string>
    <string name="login_request_message">You are not logged in. \n Kindly Login to manage your Account</string>
    <string name="login">Login</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="city">City</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="app_tagline">Your Blogging App</string>
</resources>
