<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_create_blog"
        android:icon="@drawable/ic_blogging_black"
        android:title="@string/title_write"/>

    <item
        android:id="@+id/navigation_You"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_you"/>


    <!--<item-->
    <!--android:id="@+id/navigation_notifications"-->
    <!--android:icon="@drawable/ic_notifications_black_24dp"-->
    <!--android:title="@string/title_notifications" />-->


    <!--<item-->
        <!--android:id = "@+id/navigation_settings"-->
        <!--android:icon="@drawable/ic_settings_black_24dp"-->
        <!--android:title="@string/title_settings" />-->

</menu>
