<?xml version="1.0" encoding="utf-8"?>
    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.UserProfileActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            >

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="exitUntilCollapsed|scroll"
                app:title="@string/profile"
                app:collapsedTitleGravity="start"
                app:expandedTitleGravity="top"
                >


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_upa_profile_picture"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    />

                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
                    >

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <EditText
                        android:id="@+id/et_upa_first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/first_name" />


                    <EditText
                        android:id="@+id/et_upa_last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/last_name" />

                    <EditText
                        android:id="@+id/et_upa_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/email"
                        android:minWidth="100dp" />

                    <Button
                        android:id="@+id/btn_user_profile_activity_delete_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_account" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <EditText
                        android:id="@+id/et_upa_middle_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/middle_name" />


                    <EditText
                        android:id="@+id/et_upa_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/city"
                        android:minWidth="120dp" />


                    <EditText
                        android:id="@+id/et_upa_mobile_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/mobile_no" />
                    <!---->
                    <!--<TextView-->
                    <!--android:layout_marginBottom="8dp"-->
                    <!--android:textSize="20sp"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/password"/>-->

                    <Button
                        android:id="@+id/btn_upa_change_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_password" />

                </LinearLayout>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>