<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/frag_you_tv_heading"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/your_account"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="160dp">

        <TextView
            android:layout_gravity="center"
            android:visibility="gone"
            android:id="@+id/frag_you_tv_no_login_msg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login_request_message"/>

        <LinearLayout
            android:id="@+id/frag_you_ll_account"
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/frag_you_tv_profile"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Your Profile"/>

            <View
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />


            <TextView
                android:id="@+id/frag_you_tv_blogs"
                android:textSize="20sp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Your Blogs"/>

            <View
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />


            <TextView
                android:id="@+id/frag_you_tv_logout"
                android:textSize="20sp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Logout"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        android:onClick="launchLoginActivity"
        android:id="@+id/frag_you_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:layout_gravity="center"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/frag_you_tv_legal_about"
        android:text="@string/legal_about"
        android:textSize="12sp"
        android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        />

</LinearLayout>